tests/solidity/bad/nobytecode.sol
abstract contract Abstract {
  function nothere() public virtual;
  function echidna_nothere() public virtual returns (bool);
}
